azureps-cmdlets-docs/ResourceManager/AzureRM.Insights/v2.6.0/Remove-AzureRmLogProfile.md
---
external help file: Microsoft.Azure.Commands.Insights.dll-Help.xml
ms.assetid: DDA137FD-4EB3-4FB7-A202-978922038AFC
online version:
schema: 2.0.0
content_git_url: https://github.com/Visual-Studio-China/azure-powershell/blob/3.6.0/src/ResourceManager/Insights/Commands.Insights/help/Remove-AzureRmLogProfile.md
original_content_git_url: https://github.com/Visual-Studio-China/azure-powershell/blob/3.6.0/src/ResourceManager/Insights/Commands.Insights/help/Remove-AzureRmLogProfile.md
gitcommit: https://github.com/Visual-Studio-China/azure-powershell/blob/94e42834e29c78cafba9e3f1e99e14af92561036
---

# Remove-AzureRmLogProfile

## SYNOPSIS
Removes a log profile.

## SYNTAX

```
Remove-AzureRmLogProfile -Name <String> [<CommonParameters>]
```

## DESCRIPTION
The **Remove-AzureRmLogProfile** cmdlet removes a log profile.

## EXAMPLES

### 1:
```

```

## PARAMETERS

### -Name
Specifies the name of the log profile to remove.

```yaml
Type: String
Parameter Sets: (All)
Aliases: 

Required: True
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### CommonParameters
This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see about_CommonParameters (http://go.microsoft.com/fwlink/?LinkID=113216).

## INPUTS

## OUTPUTS

## NOTES

## RELATED LINKS

[Add-AzureRmLogProfile](./Add-AzureRmLogProfile.md)

[Get-AzureRmLogProfile](./Get-AzureRmLogProfile.md)


